--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ https://templatemo.com/tm-540-lava-landing-page
                         <h2>Dashboard<em> System Development</em></h2>
                     </div>
                 </div>
-                <iframe width="1100" height="619" src="https://lookerstudio.google.com/embed/reporting/a694e90b-dd48-44fd-9f5d-e261840685ad/page/mJxbD" frameborder="0" style="border:0" allowfullscreen mb-5></iframe>
+               <iframe width="1100" height="600" src="https://lookerstudio.google.com/embed/reporting/db235e12-f548-47ea-9435-77593edc5262/page/8Im9D" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
                 <span> Periksa Koneksi anda jika tidak muncul dan data tidak mau berubah </span>
 
 
